--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
    </header>
    
    <form >
-        <input type="text" class="todo-input">
+        <input required  type="text" class="todo-input">
         <button class="todo-button" type="submit">
-          <i class="fas fa-plus-square"></i> 
+          <i class="fas fa-plus-square"></i>  
           
         </button>
     </form>
