--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <header>
-    <h1>Jacinta's Todo List</h1>
+    <h1>2023 Todo List</h1>
    </header>
    
    <form >
@@ -26,7 +26,7 @@
    <div class="todo-container">
     <ul class="todo-list"></ul>
    </div>
-
+    <footer class="footer">...Be the best you can be</footer>
    <script src="./script/script.js"></script>
 </body>
 </html>
